# yapeco

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.cursor/rules/: python.mdc
.github/workflows/: ci.yml
tests/: test_basic.py  test_typing.py
yapeco/: __init__.py
