[tool.poetry]
name = "yapeco"
version = "0.1.2"
description = "Yet Another Python Envvar Config Object"
authors = ["Michael Lisano <mlisano@protonmail.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/turtlebasket/yapeco"
keywords = ["python", "config", "environment", "dotenv", "variables"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pyright = "^1.1.337"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
